fix(ally): color contrast adjustments

--- a/projects/ngx-prx-styleguide/src/assets/styles/_forms.scss
+++ b/projects/ngx-prx-styleguide/src/assets/styles/_forms.scss
@@ -1,4 +1,3 @@
-
 // Converted Variables
 
 
@@ -61,45 +60,67 @@ label {
   cursor: pointer;
 }
 
-label + textarea {
+label+textarea {
   vertical-align: top;
 }
 
-input, select, textarea {
+input,
+select,
+textarea {
   margin: 0;
+  color: $grey-700;
 }
-input, select {
+
+input,
+select {
   vertical-align: middle;
 }
-input, textarea, select {
+
+input,
+textarea,
+select {
   background-color: $white;
 }
-input, textarea {
+
+input,
+textarea {
   color: $grey-suva;
 }
-input:focus, textarea:focus {
+
+input:focus,
+textarea:focus {
   color: $black;
 }
+
 input {
   border: 1px solid $white-fog;
 }
+
 select {
   border-color: $grey-suva;
   color: $grey-dark;
 }
+
 select:focus {
   color: $black;
 }
-input, select, textarea {
+
+input,
+select,
+textarea {
   font-family: sans-serif;
 }
-input, textarea {
+
+input,
+textarea {
   font-size: 99%;
 }
+
 select {
   font-size: 16px;
 }
-input{
+
+input {
   outline: none;
   padding: $padding-base;
 }
@@ -118,7 +139,7 @@ input {
 }
 
 ::placeholder {
-  color: $grey-northernsky;
+  color: $grey-700;
 }
 
 [disabled] {
@@ -126,20 +147,24 @@ input {
 }
 
 label[disabled=disabled] {
-  color: $grey-silver;
+  color: $grey-700;
 }
 
 select[disabled] {
   border-color: $grey-northernsky;
-  color: $grey-northernsky;
+  color: $grey-700;
   background: $white-smoke;
 }
 
-input[readonly], input[disabled], textarea[readonly], textarea[disabled] {
+input[readonly],
+input[disabled],
+textarea[readonly],
+textarea[disabled] {
   background-color: $white-smoke;
   border: 1px solid $grey-silver;
 }
 
-input[disabled][type=checkbox], input[disabled][type=radio] {
+input[disabled][type=checkbox],
+input[disabled][type=radio] {
   cursor: not-allowed;
 }
