--- a/projects/ngx-prx-styleguide/src/assets/styles/_layout.scss
+++ b/projects/ngx-prx-styleguide/src/assets/styles/_layout.scss
@@ -1,4 +1,3 @@
-
 // Converted Variables
 
 
@@ -8,7 +7,8 @@
 @import 'variables';
 
 html {
-  line-height: 1.5em;/* TODO: why em when we're not specifying font-size yet? */
+  line-height: 1.5em;
+  /* TODO: why em when we're not specifying font-size yet? */
   height: 100%;
   background-color: $grey-darkest;
   background-image: url('../images/tl_diag_stripes.svg');
@@ -21,32 +21,37 @@ body {
   margin-right: auto;
   margin-left: auto;
   font-family: 'Open Sans', sans-serif;
-  line-height: 1.5rem;/* TODO: why is this rem when there is no font-size for html? */
+  line-height: 1.5rem;
+  /* TODO: why is this rem when there is no font-size for html? */
   font-size: 14px;
-  color: $grey-dove;
+  color: $grey-700;
 }
+
 main {
-  display: block;/* IE 11 gives auto/no height to main */
+  display: block;
+  /* IE 11 gives auto/no height to main */
   min-height: 200px;
   background: $white-smoke;
   padding-bottom: $padding-base;
   position: relative;
 }
+
 @media screen and (min-width: 768px) {
   main {
     min-height: 400px;
   }
 }
 
-article .main > section {
+article .main>section {
   max-width: 1060px;
   margin-right: auto;
   margin-left: auto;
   padding-right: 15px;
   padding-left: 15px;
 }
+
 @media screen and (min-width: 768px) {
-  article .main > section {
+  article .main>section {
     padding-right: 30px;
     padding-left: 30px;
   }
