--- a/projects/ngx-prx-styleguide/src/assets/styles/_pikaday-custom.scss
+++ b/projects/ngx-prx-styleguide/src/assets/styles/_pikaday-custom.scss
@@ -1,4 +1,3 @@
-
 // Converted Variables
 
 
@@ -18,34 +17,36 @@
 }
 
 .is-today .pika-button {
-  color: #0089bd;
+  color: $blue;
 }
 
 .is-selected .pika-button {
   color: #fff;
-  background: #0089bd;
+  background: $blue;
   box-shadow: none;
   border-radius: 0;
 }
 
 .has-event .pika-button {
   color: #fff;
-  background: #0089bd;
+  background: $blue;
   box-shadow: none;
   border-radius: 0;
 }
 
 .pika-button:hover {
-  background: #ff9600;
+  background: $orange;
   border-radius: 0;
 }
 
 .pika-label {
   text-transform: uppercase;
 }
+
 .pika-select-month {
   text-transform: uppercase;
 }
+
 .pika-table thead abbr {
   text-transform: uppercase;
   text-decoration: none;
@@ -62,28 +63,34 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
+
 .calpicker.pika-single:before,
 .calpicker.pika-single:after {
   content: none;
   display: initial;
 }
+
 .calpicker .pika-lendar {
   float: none;
   width: auto;
 }
+
 .calpicker .pika-title {
   position: inherit;
 }
+
 .calpicker .pika-next {
   position: absolute;
   top: 8px;
   right: 8px;
 }
+
 .calpicker.disabled .is-selected .pika-button {
   color: #666;
   background: #f5f5f5;
   box-shadow: none;
 }
+
 .calpicker.disabled .pika-button:hover {
   background: #ddd;
   cursor: not-allowed;
